# ikshana

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  plotter.py  setup.cfg  setup.py  test.py  utils.py
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  index.rst  make.bat
requirements/: all.txt  base.txt  development.txt
src/dlutils/data/: MNIST.py  __init__.py  pytorch_data.py
src/dlutils/data/transformations/: __init__.py  album_help.py  album_pipeline.py
src/dlutils/features/: __init__.py  enums.py
src/dlutils/features/runner/: run.py  test.py  train.py
src/dlutils/models/: __init__.py  model.py  train.py
src/dlutils/models/CIFAR10/: model_AllDepth.py  model_MaxPool.py  model_OnlyStrided.py
src/dlutils/models/ResNets/: resnet.py
src/dlutils/visualization/: __init__.py  gradcam.py  norm.py  plot_inference.py  plotter.py
src/ikshana/data/: TinyImageNet.py  pytorch_data.py
src/ikshana/data/transformations/: album_help.py  album_pipeline.py
src/ikshana/features/: __init__.py  enums.py
src/ikshana/features/runner/: lr.py  run.py  test.py  train.py
src/ikshana/models/: README.md  genmodel_classification.py  model.py
src/ikshana/models/CIFAR10/: model_Depth.py  model_Dilated.py  model_ImgAug.py  multiAdd.py
src/ikshana/models/ResNets/: resnet.py
src/ikshana/models/configs/: cifar.yaml
src/ikshana/utils/errors/: config_not_provided.py
src/ikshana/visualization/: gradcam.py  norm.py  plot_inference.py  plotter.py
src/models/: train.py
