[metadata]
name = ikshana
version = 0.1.1
author = ikshana.ai
author_email = author@example.com
description = A DL package for computer vision
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ikshana-ai/ikshana
project_urls =
    Bug Tracker = https://github.com/ikshana-ai/ikshana/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
